<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yv3DAudio</string>
    <string name="open">Open</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="apply">Apply</string>
    <string name="auto">Auto</string>
    <string name="func">Func</string>
    <string name="one">1</string>
    <string name="encode">Encode</string>
    <string name="copyright">Coded by yvbbrjdr\nEmail: xyyq@outlook.com</string>
    <string name="title_activity_function_controls">FunctionControls</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
