<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tk.yvbb.yv3daudio.MainActivity"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/OpenButton"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:onClick="OpenClick"
            android:text="@string/open" />

        <ToggleButton
            android:id="@+id/PlayTButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="PlayClick"
            android:textOff="@string/play"
            android:textOn="@string/play" />

        <Button
            android:id="@+id/StopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="StopClick"
            android:text="@string/stop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/XText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:text="@string/one" />

            <ToggleButton
                android:id="@+id/CycleXTButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="CycleClick"
                android:textOff="@string/cycle"
                android:textOn="@string/cycle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/YText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:text="@string/one" />

            <ToggleButton
                android:id="@+id/CycleYTButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="CycleClick"
                android:textOff="@string/cycle"
                android:textOn="@string/cycle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/ZText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:text="@string/one" />

            <ToggleButton
                android:id="@+id/CycleZTButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="CycleClick"
                android:textOff="@string/cycle"
                android:textOn="@string/cycle" />

        </LinearLayout>

        <Button
            android:id="@+id/ApplyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="ApplyClick"
            android:text="@string/apply" />

        <ToggleButton
            android:id="@+id/EncodeTButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="EncodeClick"
            android:textOff="@string/encode"
            android:textOn="@string/encode" />

        <DigitalClock
            android:id="@+id/Clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/InformationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright" />

    </LinearLayout>
</FrameLayout>
